<?xml version="1.0"?>
<package>
  <name>kdlidar_ros_msgs</name>
  <version>0.0.1</version>
  <description>KdLidar ROS Wrapper.</description>

  <maintainer email="engineering-support@kudan.eu">KudanLimited</maintainer>

  <license>" "</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
